--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>A132.GitHub.io</title>
+    <title>A132 Blog</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/a132">View on GitHub</a>
 
-          <h1 id="project_title">A132.GitHub.io</h1>
-          <h2 id="project_tagline">this is my personal page</h2>
+          <h1 id="project_title">A132 Blog</h1>
+          <h2 id="project_tagline">this is my personal bolg</h2>
 
         </header>
     </div>
